Added lombok and updated FIleProvider to read and write bytes