@@ -1,15 +1,20 @@
 package edu.ntnu.idi.idatt.boardgame.core.filesystem;
 
+import java.io.BufferedInputStream;
+import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.logging.Logger;
 
 /**
- * A FileProvider implementation for storing and retrieving files
- * on the local disk using the default filesystem.
+ * A FileProvider implementation for storing and retrieving files on the local disk using the
+ * default filesystem.
  * <p>
  * This class provides methods to save, delete, check existence, and retrieve files.
  * </p>
@@ -26,18 +31,27 @@ public class LocalFileProvider implements FileProvider {
    * Creates directories if they do not exist and replaces existing files.
    * </p>
    *
-   * @param path  The file path or identifier where data should be saved.
-   * @param data  The InputStream representing the file/data to be saved.
-   * @throws      FileSaveException if an error occurs while saving the file.
+   * @param path The file path or identifier where data should be saved.
+   * @param data The InputStream representing the file/data to be saved.
+   * @throws FileSaveException if an error occurs while saving the file.
    * @see edu.ntnu.idi.idatt.boardgame.core.filesystem.FileSaveException
    */
   @Override
-  public void save(String path, InputStream data) {
-    try {
-      Path destination = Path.of(path);
-      Files.createDirectories(destination.getParent());
-      Files.copy(data, destination, StandardCopyOption.REPLACE_EXISTING);
+  public void save(String path, byte[] bytes) {
+    Path filePath = Paths.get(path);
+    if (Files.notExists(filePath.getParent())) {
+      try {
+        Files.createDirectories(filePath.getParent());
+      } catch (IOException e) {
+        logger.warning("Failed to create directories for path: " + path);
+        throw new FileSaveException("Failed to create directories for path: " + path);
+      }
+    }
+    try (OutputStream writer = Files.newOutputStream(filePath, StandardOpenOption.CREATE)) {
+      writer.write(bytes);
     } catch (IOException e) {
+      e.printStackTrace();
+      logger.warning("Failed to save file at path: " + path);
       throw new FileSaveException("Failed to save file at path: " + path);
     }
   }
@@ -48,9 +62,9 @@ public class LocalFileProvider implements FileProvider {
    * Returns true if the file was deleted, false if no file existed at that path.
    * </p>
    *
-   * @param path  The file path or identifier to delete.
-   * @return      true if the file was deleted, false if no file existed at that path.
-   * @throws      FileDeleteException if an error occurs while deleting the file.
+   * @param path The file path or identifier to delete.
+   * @return true if the file was deleted, false if no file existed at that path.
+   * @throws FileDeleteException if an error occurs while deleting the file.
    * @see edu.ntnu.idi.idatt.boardgame.core.filesystem.FileDeleteException
    */
   @Override
@@ -58,6 +72,7 @@ public class LocalFileProvider implements FileProvider {
     try {
       return Files.deleteIfExists(Path.of(path));
     } catch (IOException e) {
+      e.printStackTrace();
       throw new FileDeleteException("Failed to delete file at path: " + path);
     }
   }
@@ -65,8 +80,8 @@ public class LocalFileProvider implements FileProvider {
   /**
    * Checks if a file or data exists at the specified path.
    *
-   * @param path  The file path or identifier.
-   * @return      true if the file exists, false otherwise.
+   * @param path The file path or identifier.
+   * @return true if the file exists, false otherwise.
    */
   @Override
   public boolean exists(String path) {
@@ -79,24 +94,19 @@ public class LocalFileProvider implements FileProvider {
    * First checks the classpath, then the filesystem.
    * </p>
    *
-   * @param path  The file path or identifier to retrieve.
-   * @return      An InputStream of the requested file/data, or null if it does not exist.
-   * @throws      FileReadException if an error occurs while loading the file.
-   * @see edu.ntnu.idi.idatt.boardgame.core.filesystem.FileReadException
+   * @param path The file path or identifier to retrieve.
+   * @return An InputStream of the requested file/data, or null if it does not exist.
+   * @throws FileReadException if an error occurs while loading the file.
+   * @see FileReadException
    */
   @Override
-  public InputStream get(String path) {
-    InputStream stream = getClass().getResourceAsStream("/" + path);
-    if (stream != null) {
-      return stream;
-    }
-    if (!exists(path)) {
-      logger.info("File does not exist");
-      return null;
-    }
-    try {
-      return Files.newInputStream(Path.of(path));
+  public byte[] get(String path) {
+    File file = new File(path);
+    try (BufferedInputStream buff = new BufferedInputStream(new FileInputStream(file))) {
+      return buff.readAllBytes();
     } catch (IOException e) {
+      e.printStackTrace();
+      logger.warning("Failed to read file from path: " + path);
       throw new FileReadException("Failed to read file at path: " + path);
     }
   }
